link all picture and detail button, login system can be use. Register still have problem.

--- a/WebContent/all_games.html
+++ b/WebContent/all_games.html
@@ -42,6 +42,10 @@
     <script src="resources/scripts/axure/legacy.js"></script>
     <script src="resources/scripts/axure/viewer.js"></script>
     <script src="resources/scripts/axure/math.js"></script>
+    <link href="data/styles.css" type="text/css" rel="stylesheet"/>
+    <link href="data/loginSect.css" type="text/css" rel="stylesheet"/>
+    <script src="data/commonFunctions.js"></script>
+    <script src="data/login.js"></script>
     <script type="text/javascript">
       $axure.utils.getTransparentGifPath = function() { return 'resources/images/transparent.gif'; };
       $axure.utils.getOtherPath = function() { return 'resources/Other.html'; };
@@ -174,32 +178,61 @@
         </div>
       </div>
 
-      <!-- Unnamed (Shape) -->
-      <div id="u632" class="ax_default icon">
-        <img id="u632_img" class="img " src="images/customer_service/u248.png"/>
-        <!-- Unnamed () -->
-        <div id="u633" class="text" style="display: none; visibility: hidden">
-          <p><span></span></p>
-        </div>
-      </div>
+      
 
-      <!-- Unnamed (Rectangle) -->
-      <div id="u634" class="ax_default heading_2">
-        <div id="u634_div" class=""></div>
-        <!-- Unnamed () -->
-        <div id="u635" class="text" style="visibility: visible;">
-          <p><span>User name</span></p>
-        </div>
-      </div>
+      <div id="loginSect">
 
-      <!-- Unnamed (Shape) -->
-      <div id="u636" class="ax_default icon">
-        <img id="u636_img" class="img " src="images/customer_service/u252.png"/>
-        <!-- Unnamed () -->
-        <div id="u637" class="text" style="display: none; visibility: hidden">
-          <p><span></span></p>
-        </div>
+  <!-- Username Text -->
+  <div id="u44" class="ax_default box_2">
+    <div id="u44_div" class=""></div>
+    <!-- Unnamed () -->
+    <div id="u45" class="text" style="visibility: visible;">
+      <p><span>Username</span></p>
+    </div>
+  </div>
+  
+  <!-- Password text -->
+  <div id="u46" class="ax_default box_2">
+    <div id="u46_div" class=""></div>
+    <!-- Unnamed () -->
+    <div id="u47" class="text" style="visibility: visible;">
+      <p><span>Password</span></p>
+    </div>
+  </div>
+  
+  <form id="loginInput" action="login" method="post">
+      <!-- Username input -->
+      <div id="u186" class="ax_default text_field">
+        <input id="u186_input" type="text" value="" name="username"/>
       </div>
+      
+      <!-- Password Input -->
+      <div id="u187" class="ax_default text_field">
+        <input id="u187_input" type="password" value="" name="password"/>
+      </div>
+  </form>
+  
+   <!-- Login button -->
+  <div id="u184" class="ax_default primary_button">
+    <div id="u184_div" class=""></div>
+    <!-- Unnamed () -->
+    <div id="u185" class="text" style="visibility: visible;">
+      <p><span>LOGIN</span></p>
+    </div>
+  </div>
+
+  <!-- Register -->
+  <div id="u182" class="ax_default primary_button">
+    <div id="u182_div" class=""></div>
+    <!-- Unnamed () -->
+    <div id="u183" class="text" style="visibility: visible;">
+      <p><span style="text-decoration:underline;"><a href="register.html">Register</a></span></p>
+    </div>
+  </div>
+  
+</div>
+
+ 
 
       <!-- Unnamed (Rectangle) -->
       <div id="u638" class="ax_default primary_button">
@@ -222,113 +255,113 @@
         </div>
       </div>
 
-      <!-- Unnamed (Image) -->
-      <div id="u642" class="ax_default image">
+      <!-- Strom Blood (Image) -->
+      <div id="u642" class="ax_default image"><a href="game_info_page.html?gID=1">
         <img id="u642_img" class="img " src="images/main_page/u28.jpg"/>
         <!-- Unnamed () -->
         <div id="u643" class="text" style="display: none; visibility: hidden">
           <p><span></span></p>
         </div>
-      </div>
+     </a></div>
 
-      <!-- Unnamed (Image) -->
-      <div id="u644" class="ax_default image">
+      <!-- MotoGp17 (Image) -->
+      <div id="u644" class="ax_default image"><a href="game_info_page.html?gID=2">
         <img id="u644_img" class="img " src="images/main_page/u30.jpg"/>
         <!-- Unnamed () -->
         <div id="u645" class="text" style="display: none; visibility: hidden">
           <p><span></span></p>
         </div>
-      </div>
+     </a></div>
 
-      <!-- Unnamed (Image) -->
-      <div id="u646" class="ax_default image">
+      <!-- Dirt4 (Image) -->
+      <div id="u646" class="ax_default image"><a href="game_info_page.html?gID=3">
         <img id="u646_img" class="img " src="images/main_page/u32.jpg"/>
         <!-- Unnamed () -->
         <div id="u647" class="text" style="display: none; visibility: hidden">
           <p><span></span></p>
         </div>
-      </div>
+      </a></div>
 
-      <!-- Unnamed (Image) -->
-      <div id="u648" class="ax_default image">
+      <!-- Morrowind (Image) -->
+      <div id="u648" class="ax_default image"><a href="game_info_page.html?gID=4">
         <img id="u648_img" class="img " src="images/main_page/u34.jpg"/>
         <!-- Unnamed () -->
         <div id="u649" class="text" style="display: none; visibility: hidden">
           <p><span></span></p>
         </div>
-      </div>
+     </a></div>
 
-      <!-- Unnamed (Image) -->
-      <div id="u650" class="ax_default image">
+      <!-- Tekken7 (Image) -->
+      <div id="u650" class="ax_default image"><a href="game_info_page.html?gID=5">
         <img id="u650_img" class="img " src="images/main_page/u36.png"/>
         <!-- Unnamed () -->
         <div id="u651" class="text" style="display: none; visibility: hidden">
           <p><span></span></p>
         </div>
-      </div>
+      </a></div>
 
-      <!-- Unnamed (Image) -->
-      <div id="u652" class="ax_default image">
+      <!-- Tekken7 deluxe  (Image) -->
+      <div id="u652" class="ax_default image"><a href="game_info_page.html?gID=6">
         <img id="u652_img" class="img " src="images/main_page/u38.jpg"/>
         <!-- Unnamed () -->
         <div id="u653" class="text" style="display: none; visibility: hidden">
           <p><span></span></p>
         </div>
-      </div>
+     </a></div>
 
-      <!-- Unnamed (Rectangle) -->
-      <div id="u654" class="ax_default primary_button">
+      <!-- Strom blood (Rectangle) -->
+      <div id="u654" class="ax_default primary_button"><a href="game_info_page.html?gID=1">
         <div id="u654_div" class=""></div>
         <!-- Unnamed () -->
         <div id="u655" class="text" style="visibility: visible;">
           <p><span>Details</span></p>
         </div>
-      </div>
+     </a></div>
 
-      <!-- Unnamed (Rectangle) -->
-      <div id="u656" class="ax_default primary_button">
+      <!-- Tekken7 deluxe (Rectangle) -->
+      <div id="u656" class="ax_default primary_button"><a href="game_info_page.html?gID=6">
         <div id="u656_div" class=""></div>
         <!-- Unnamed () -->
         <div id="u657" class="text" style="visibility: visible;">
           <p><span>Details</span></p>
         </div>
-      </div>
+      </a></div>
 
-      <!-- Unnamed (Rectangle) -->
-      <div id="u658" class="ax_default primary_button">
+      <!-- Morrowind (Rectangle) -->
+      <div id="u658" class="ax_default primary_button"><a href="game_info_page.html?gID=4">
         <div id="u658_div" class=""></div>
         <!-- Unnamed () -->
         <div id="u659" class="text" style="visibility: visible;">
           <p><span>Details</span></p>
         </div>
-      </div>
+      </a></div>
 
-      <!-- Unnamed (Rectangle) -->
-      <div id="u660" class="ax_default primary_button">
+      <!-- Dirt4 (Rectangle) -->
+      <div id="u660" class="ax_default primary_button"><a href="game_info_page.html?gID=3">
         <div id="u660_div" class=""></div>
         <!-- Unnamed () -->
         <div id="u661" class="text" style="visibility: visible;">
           <p><span>Details</span></p>
         </div>
-      </div>
+      </a></div>
 
-      <!-- Unnamed (Rectangle) -->
-      <div id="u662" class="ax_default primary_button">
+      <!-- MotoGp17 (Rectangle) -->
+      <div id="u662" class="ax_default primary_button"><a href="game_info_page.html?gID=2">
         <div id="u662_div" class=""></div>
         <!-- Unnamed () -->
         <div id="u663" class="text" style="visibility: visible;">
           <p><span>Details</span></p>
         </div>
-      </div>
+      </a></div>
 
-      <!-- Unnamed (Rectangle) -->
-      <div id="u664" class="ax_default primary_button">
+      <!-- Tekken7 (Rectangle) -->
+      <div id="u664" class="ax_default primary_button"><a href="game_info_page.html?gID=5">
         <div id="u664_div" class=""></div>
         <!-- Unnamed () -->
         <div id="u665" class="text" style="visibility: visible;">
           <p><span>Details</span></p>
         </div>
-      </div>
+      </a></div>
 
       <!-- Unnamed (Rectangle) -->
       <div id="u666" class="ax_default box_3">
@@ -411,113 +444,113 @@
         </div>
       </div>
 
-      <!-- Unnamed (Image) -->
-      <div id="u684" class="ax_default image">
+      <!-- Batman (Image) -->
+      <div id="u684" class="ax_default image"><a href="game_info_page.html?gID=7">
         <img id="u684_img" class="img " src="images/main_page/u68.png"/>
         <!-- Unnamed () -->
         <div id="u685" class="text" style="display: none; visibility: hidden">
           <p><span></span></p>
         </div>
-      </div>
+     </a></div>
 
-      <!-- Unnamed (Image) -->
-      <div id="u686" class="ax_default image">
+      <!-- Nightmare(Image) -->
+      <div id="u686" class="ax_default image"><a href="game_info_page.html?gID=8">
         <img id="u686_img" class="img " src="images/main_page/u70.jpg"/>
         <!-- Unnamed () -->
         <div id="u687" class="text" style="display: none; visibility: hidden">
           <p><span></span></p>
         </div>
-      </div>
+      </a></div>
 
-      <!-- Unnamed (Image) -->
-      <div id="u688" class="ax_default image">
+      <!-- Battlegrounds (Image) -->
+      <div id="u688" class="ax_default image"><a href="game_info_page.html?gID=9">
         <img id="u688_img" class="img " src="images/main_page/u72.jpg"/>
         <!-- Unnamed () -->
         <div id="u689" class="text" style="display: none; visibility: hidden">
           <p><span></span></p>
         </div>
-      </div>
+     </a></div>
 
-      <!-- Unnamed (Image) -->
-      <div id="u690" class="ax_default image">
+      <!-- Prey (Image) -->
+      <div id="u690" class="ax_default image"><a href="game_info_page.html?gID=10">
         <img id="u690_img" class="img " src="images/main_page/u74.png"/>
         <!-- Unnamed () -->
         <div id="u691" class="text" style="display: none; visibility: hidden">
           <p><span></span></p>
         </div>
-      </div>
+      </a></div>
 
-      <!-- Unnamed (Image) -->
-      <div id="u692" class="ax_default image">
+      <!--Risingstorm(Image) -->
+      <div id="u692" class="ax_default image"><a href="game_info_page.html?gID=12">
         <img id="u692_img" class="img " src="images/main_page/u76.jpg"/>
         <!-- Unnamed () -->
         <div id="u693" class="text" style="display: none; visibility: hidden">
           <p><span></span></p>
         </div>
-      </div>
+     </a></div>
 
-      <!-- Unnamed (Image) -->
-      <div id="u694" class="ax_default image">
+      <!-- Dawn of war2 (Image) -->
+      <div id="u694" class="ax_default image"><a href="game_info_page.html?gID=11">
         <img id="u694_img" class="img " src="images/main_page/u78.png"/>
         <!-- Unnamed () -->
         <div id="u695" class="text" style="display: none; visibility: hidden">
           <p><span></span></p>
         </div>
-      </div>
+      </a></div>
 
-      <!-- Unnamed (Rectangle) -->
-      <div id="u696" class="ax_default primary_button">
+      <!-- Batman (Rectangle) -->
+      <div id="u696" class="ax_default primary_button"><a href="game_info_page.html?gID=7">
         <div id="u696_div" class=""></div>
         <!-- Unnamed () -->
         <div id="u697" class="text" style="visibility: visible;">
           <p><span>Details</span></p>
         </div>
-      </div>
+     </a></div>
 
-      <!-- Unnamed (Rectangle) -->
-      <div id="u698" class="ax_default primary_button">
+      <!-- Dawn of war2 (Rectangle) -->
+      <div id="u698" class="ax_default primary_button"><a href="game_info_page.html?gID=11">
         <div id="u698_div" class=""></div>
         <!-- Unnamed () -->
         <div id="u699" class="text" style="visibility: visible;">
           <p><span>Details</span></p>
         </div>
-      </div>
+      </a></div>
 
-      <!-- Unnamed (Rectangle) -->
-      <div id="u700" class="ax_default primary_button">
+      <!-- Prey (Rectangle) -->
+      <div id="u700" class="ax_default primary_button"><a href="game_info_page.html?gID=10">
         <div id="u700_div" class=""></div>
         <!-- Unnamed () -->
         <div id="u701" class="text" style="visibility: visible;">
           <p><span>Details</span></p>
         </div>
-      </div>
+      </a></div>
 
-      <!-- Unnamed (Rectangle) -->
-      <div id="u702" class="ax_default primary_button">
+      <!-- Nightmares (Rectangle) -->
+      <div id="u702" class="ax_default primary_button"><a href="game_info_page.html?gID=8">
         <div id="u702_div" class=""></div>
         <!-- Unnamed () -->
         <div id="u703" class="text" style="visibility: visible;">
           <p><span>Details</span></p>
         </div>
-      </div>
+      </a></div>
 
-      <!-- Unnamed (Rectangle) -->
-      <div id="u704" class="ax_default primary_button">
+      <!-- Battlegrounds (Rectangle) -->
+      <div id="u704" class="ax_default primary_button"><a href="game_info_page.html?gID=9">
         <div id="u704_div" class=""></div>
         <!-- Unnamed () -->
         <div id="u705" class="text" style="visibility: visible;">
           <p><span>Details</span></p>
         </div>
-      </div>
+      </a></div>
 
-      <!-- Unnamed (Rectangle) -->
-      <div id="u706" class="ax_default primary_button">
+      <!-- Risingstorm (Rectangle) -->
+      <div id="u706" class="ax_default primary_button"><a href="game_info_page.html?gID=12">
         <div id="u706_div" class=""></div>
         <!-- Unnamed () -->
         <div id="u707" class="text" style="visibility: visible;">
           <p><span>Details</span></p>
         </div>
-      </div>
+      </a></div>
 
       <!-- Unnamed (Rectangle) -->
       <div id="u708" class="ax_default box_3">
