--- a/WebContent/account_page.html
+++ b/WebContent/account_page.html
@@ -854,7 +854,7 @@
 	      </div>
 			
 		<div id="payments">	<!-- For all payment -->
-			<div id="payment"> <!-- For one payment -->
+			<div class="payment"> <!-- For one payment -->
 				      <!-- Unnamed (Shape) -->
 				      <div  class="ax_default icon cardType">
 				        <img class="img cardTypeimg" src="images/payment_page/u3734.png"/>
@@ -886,7 +886,6 @@
 				          <p><span>REMOVE</span></p>
 				        </div>
 				      </div>
-	    
 	  			</div>
 	  		</div>
       
