Show payment options completed

--- a/WebContent/account_page.html
+++ b/WebContent/account_page.html
@@ -889,7 +889,7 @@
 	  			</div>
 	  		</div>
       
-	      <div id="addPayment">
+	      <div id="addPayment" class="primary_button">
 			         <!-- Unnamed (Shape) -->
 			      <div id="plusSign" class="ax_default icon">
 			        <img id="plusSignimg" class="img " src="images/cards/add.png"/>
