new edition of about page

--- a/WebContent/about.html
+++ b/WebContent/about.html
@@ -42,6 +42,10 @@
     <script src="resources/scripts/axure/legacy.js"></script>
     <script src="resources/scripts/axure/viewer.js"></script>
     <script src="resources/scripts/axure/math.js"></script>
+    <link href="data/styles.css" type="text/css" rel="stylesheet"/>
+    <link href="data/loginSect.css" type="text/css" rel="stylesheet"/>
+    <script src="data/commonFunctions.js"></script>
+    <script src="data/login.js"></script>
     <script type="text/javascript">
       $axure.utils.getTransparentGifPath = function() { return 'resources/images/transparent.gif'; };
       $axure.utils.getOtherPath = function() { return 'resources/Other.html'; };
@@ -205,8 +209,8 @@
       <div id="u1108" class="ax_default box_2">
         <div id="u1108_div" class=""></div>
         <!-- Unnamed () -->
-        <div id="u1109" class="text" style="visibility: visible;">
-          <p><span>The ultimate entertainment platform.</span></p><p><span><br></span></p>
+        <div id="u1109" class="text" style="display: none; visibility: hidden">
+          <p><span></span></p>
         </div>
       </div>
 
@@ -214,8 +218,8 @@
       <div id="u1110" class="ax_default box_2">
         <div id="u1110_div" class=""></div>
         <!-- Unnamed () -->
-        <div id="u1111" class="text" style="visibility: visible;">
-          <p><span>Play, conncet, creat and more.</span></p>
+        <div id="u1111" class="text" style="display: none; visibility: hidden">
+          <p><span></span></p>
         </div>
       </div>
 
@@ -223,8 +227,8 @@
       <div id="u1112" class="ax_default box_2">
         <div id="u1112_div" class=""></div>
         <!-- Unnamed () -->
-        <div id="u1113" class="text" style="visibility: visible;">
-          <p><span>We have thousands of games from all kinds and everything in-between. </span></p>
+        <div id="u1113" class="text" style="display: none; visibility: hidden">
+          <p><span></span></p>
         </div>
       </div>
 
@@ -232,8 +236,8 @@
       <div id="u1114" class="ax_default box_2">
         <div id="u1114_div" class=""></div>
         <!-- Unnamed () -->
-        <div id="u1115" class="text" style="visibility: visible;">
-          <p><span>Enjoy cheaper game collections, convenient download, automatic updates and other perks.</span></p>
+        <div id="u1115" class="text" style="display: none; visibility: hidden">
+          <p><span></span></p>
         </div>
       </div>
 
@@ -242,7 +246,7 @@
         <div id="u1116_div" class=""></div>
         <!-- Unnamed () -->
         <div id="u1117" class="text" style="visibility: visible;">
-          <p><span>Meet new people, join the community and discuss the game together. </span></p>
+          <p><span style="font-family:'Arial Negreta', 'Arial Normal', 'Arial';font-weight:700;">Introduction about our site</span></p><p><span style="font-family:'Arial Normal', 'Arial';font-weight:400;">Gamers run the risk of disliking the game in the first few hours and never touching it again. This project aims to bring such subscription services to PC gamers. Despite lucrative opportunities present in console and mobile markets, the scope of this project is limited to only PC gaming. It would offer the customer the ability to discover exciting new indie games or famous classics with a smaller budget. For $15/month, players can play a large collection of games whenever they want and however much they want. The collection will only get bigger and bigger as more games are added to it. Players can cut their monthly gaming budget immensely. With such a low price point, customers can eliminate the feeling of buyer’s remorse and be more willing to expand their gaming interest across different categories. If they are not satisfied with a game, they can just stop playing and search for other games fits their interest. If the customers are not satisfied with the collection of games offered, they can cancel their subscription any time they want. As a bonus, some AAA games may be added to the collection for a limited time the customer can experience the latest and greatest as well.</span></p><p><span style="font-family:'Arial Normal', 'Arial';font-weight:400;"><br></span></p><p><span style="font-family:'Arial Negreta', 'Arial Normal', 'Arial';font-weight:700;">Business background</span></p><p><span style="font-family:'Arial Normal', 'Arial';font-weight:400;">With all of our team members being gamers and customers of various digital retail platforms ourselves, we realize that the way gaming as a hobby can deter a lot of people by the price alone. Most people do not have the spare $60-$100 a month to enjoy just one or two games, especially when other form of entertainment already costs them. People who are unfamiliar with gaming are also hesitant to try when a game can cost a week's worth of food. By buying a game, they may face a risk of getting bored within the first 1-2 hours and never playing the game ever again. With the practice of giving out demos going out of style and more and more games are coming out unfinished, unpolished and neglected by the developers, a new game is riskier than ever to buy. NetGame intends to create a new platform to deal exactly with that issue.</span></p><p><span style="font-family:'Arial Normal', 'Arial';font-weight:400;"><br></span></p><p><span style="font-family:'Arial Negreta', 'Arial Normal', 'Arial';font-weight:700;">Guide to use it</span></p><p><span style="font-family:'Arial Negreta', 'Arial Normal', 'Arial';font-weight:700;">Main page</span></p><p><span style="font-family:'Arial Normal', 'Arial';font-weight:400;">In main page, the site allow user to register to become a user of our site, vistor can register to become an user by clicking the register button and fill in the detail. The user can login our site in order to use more function. User will jump to All games page, coming soon page, latest page, about page, support page, and game list page by clicking them respectly.</span></p><p><span style="font-family:'Arial Negreta', 'Arial Normal', 'Arial';font-weight:700;">All games</span><span style="font-family:'Arial Normal', 'Arial';font-weight:400;">- Include all games which store in ou site, all the game show in page can be saved in user game list.</span></p><p><span style="font-family:'Arial Negreta', 'Arial Normal', 'Arial';font-weight:700;">Coming soon</span><span style="font-family:'Arial Normal', 'Arial';font-weight:400;"> - include the games which will be release soon, user can also save the game in their game list.</span></p><p><span style="font-family:'Arial Negreta', 'Arial Normal', 'Arial';font-weight:700;">Latest</span><span style="font-family:'Arial Normal', 'Arial';font-weight:400;"> - Newest games just release. . User can save the game in their game list.</span></p><p><span style="font-family:'Arial Negreta', 'Arial Normal', 'Arial';font-weight:700;">About</span><span style="font-family:'Arial Normal', 'Arial';font-weight:400;"> - Introduce our site, business background and Guide to use our site.</span></p><p><span style="font-family:'Arial Negreta', 'Arial Normal', 'Arial';font-weight:700;">Support</span><span style="font-family:'Arial Normal', 'Arial';font-weight:400;">- If the user have any common problem, they can find the way to solve the problem.</span></p><p><span style="font-family:'Arial Negreta', 'Arial Normal', 'Arial';font-weight:700;">Game list</span><span style="font-family:'Arial Normal', 'Arial';font-weight:400;"> - All the game store in here, user can save the game in game list.</span></p><p><span style="font-family:'Arial Negreta', 'Arial Normal', 'Arial';font-weight:700;">Account page</span><span style="font-family:'Arial Normal', 'Arial';font-weight:400;"> - user can modify their account detail, payment type and game list.</span></p>
         </div>
       </div>
 
@@ -504,32 +508,61 @@
         </div>
       </div>
 
-      <!-- Unnamed (Shape) -->
-      <div id="u1172" class="ax_default icon">
-        <img id="u1172_img" class="img " src="images/customer_service/u248.png"/>
-        <!-- Unnamed () -->
-        <div id="u1173" class="text" style="display: none; visibility: hidden">
-          <p><span></span></p>
-        </div>
-      </div>
+  
 
-      <!-- Unnamed (Rectangle) -->
-      <div id="u1174" class="ax_default heading_2">
-        <div id="u1174_div" class=""></div>
-        <!-- Unnamed () -->
-        <div id="u1175" class="text" style="visibility: visible;">
-          <p><span>User name</span></p>
-        </div>
-      </div>
+      <div id="loginSect">
 
-      <!-- Unnamed (Shape) -->
-      <div id="u1176" class="ax_default icon">
-        <img id="u1176_img" class="img " src="images/customer_service/u252.png"/>
-        <!-- Unnamed () -->
-        <div id="u1177" class="text" style="display: none; visibility: hidden">
-          <p><span></span></p>
-        </div>
+  <!-- Username Text -->
+  <div id="u44" class="ax_default box_2">
+    <div id="u44_div" class=""></div>
+    <!-- Unnamed () -->
+    <div id="u45" class="text" style="visibility: visible;">
+      <p><span>Username</span></p>
+    </div>
+  </div>
+  
+  <!-- Password text -->
+  <div id="u46" class="ax_default box_2">
+    <div id="u46_div" class=""></div>
+    <!-- Unnamed () -->
+    <div id="u47" class="text" style="visibility: visible;">
+      <p><span>Password</span></p>
+    </div>
+  </div>
+  
+  <form id="loginInput" action="login" method="post">
+      <!-- Username input -->
+      <div id="u186" class="ax_default text_field">
+        <input id="u186_input" type="text" value="" name="username"/>
       </div>
+      
+      <!-- Password Input -->
+      <div id="u187" class="ax_default text_field">
+        <input id="u187_input" type="password" value="" name="password"/>
+      </div>
+  </form>
+  
+   <!-- Login button -->
+  <div id="u184" class="ax_default primary_button">
+    <div id="u184_div" class=""></div>
+    <!-- Unnamed () -->
+    <div id="u185" class="text" style="visibility: visible;">
+      <p><span>LOGIN</span></p>
+    </div>
+  </div>
+
+  <!-- Register -->
+  <div id="u182" class="ax_default primary_button">
+    <div id="u182_div" class=""></div>
+    <!-- Unnamed () -->
+    <div id="u183" class="text" style="visibility: visible;">
+      <p><span style="text-decoration:underline;"><a href="register.html">Register</a></span></p>
+    </div>
+  </div>
+  
+</div>
+
+
 
       <!-- Unnamed (Rectangle) -->
       <div id="u1178" class="ax_default primary_button">
@@ -543,14 +576,7 @@
       <!-- Unnamed (Rectangle) [reference page] -->
       <div id="u1178_ref" class="reference_page"></div>
 
-      <!-- Unnamed (Rectangle) -->
-      <div id="u1180" class="ax_default primary_button">
-        <div id="u1180_div" class=""></div>
-        <!-- Unnamed () -->
-        <div id="u1181" class="text" style="visibility: visible;">
-          <p><span style="text-decoration:underline;">Register</span></p>
-        </div>
-      </div>
+   
     </div>
   </body>
 </html>
