Replace game list with contact us

--- a/WebContent/about.html
+++ b/WebContent/about.html
@@ -569,7 +569,7 @@
         <div id="u1178_div" class=""></div>
         <!-- Unnamed () -->
         <div id="u1179" class="text" style="visibility: visible;">
-          <p><span>GAME LIST</span></p>
+          <p><span>CONTACT US</span></p>
         </div>
       </div>
 
