--- a/WebContent/about_us.html
+++ b/WebContent/about_us.html
@@ -485,7 +485,7 @@
         <div id="u354_div" class=""></div>
         <!-- Unnamed () -->
         <div id="u355" class="text" style="visibility: visible;">
-          <p><span>GAME LIST</span></p>
+          <p><span>CONTACT US</span></p>
         </div>
       </div>
 
