--- a/WebContent/account_page.html
+++ b/WebContent/account_page.html
@@ -665,7 +665,7 @@
         <div id="u1474_div" class=""></div>
         <!-- Unnamed () -->
         <div id="u1475" class="text" style="">
-          <p><span>GAME LIST</span></p>
+          <p><span>CONTACT US</span></p>
         </div>
       </div>
             <!-- Unnamed (Rectangle) [reference page] -->
