--- a/WebContent/all_games.html
+++ b/WebContent/all_games.html
@@ -239,7 +239,7 @@
         <div id="u638_div" class=""></div>
         <!-- Unnamed () -->
         <div id="u639" class="text" style="visibility: visible;">
-          <p><span>GAME LIST</span></p>
+          <p><span>CONTACT US</span></p>
         </div>
       </div>
 
