--- a/WebContent/customer_service.html
+++ b/WebContent/customer_service.html
@@ -486,7 +486,7 @@
         <div id="u268_div" class=""></div>
         <!-- Unnamed () -->
         <div id="u269" class="text" style="visibility: visible;">
-          <p><span>GAME LIST</span></p>
+          <p><span>CONTACT US</span></p>
         </div>
       </div>
 
