--- a/WebContent/game_info_page.html
+++ b/WebContent/game_info_page.html
@@ -848,7 +848,7 @@
         <div id="u3594_div" class=""></div>
         <!-- Unnamed () -->
         <div id="u3595" class="text" style="visibility: visible;">
-          <p><span>GAME LIST</span></p>
+          <p><span>CONTACT US</span></p>
         </div>
       </div>
 
