--- a/WebContent/latest.html
+++ b/WebContent/latest.html
@@ -434,7 +434,7 @@
         <div id="u994_div" class=""></div>
         <!-- Unnamed () -->
         <div id="u995" class="text" style="visibility: visible;">
-          <p><span>GAME LIST</span></p>
+          <p><span>CONTACT US</span></p>
         </div>
       </div>
 
