--- a/WebContent/main_page.html
+++ b/WebContent/main_page.html
@@ -873,7 +873,7 @@
         <div id="u180_div" class=""></div>
         <!-- Unnamed () -->
         <div id="u181" class="text" style="visibility: visible;">
-          <p><span>GAME LIST</span></p>
+          <p><span>CONTACT US</span></p>
         </div>
       </div>
 
