--- a/WebContent/privacy_policy.html
+++ b/WebContent/privacy_policy.html
@@ -488,7 +488,7 @@
         <div id="u522_div" class=""></div>
         <!-- Unnamed () -->
         <div id="u523" class="text" style="visibility: visible;">
-          <p><span>GAME LIST</span></p>
+          <p><span>CONTACT US</span></p>
         </div>
       </div>
 
