--- a/WebContent/support.html
+++ b/WebContent/support.html
@@ -694,7 +694,7 @@
         <div id="u1310_div" class=""></div>
         <!-- Unnamed () -->
         <div id="u1311" class="text" style="visibility: visible;">
-          <p><span>GAME LIST</span></p>
+          <p><span>CONTACT US</span></p>
         </div>
       </div>
 
