--- a/WebContent/affiliate_program.html
+++ b/WebContent/affiliate_program.html
@@ -470,7 +470,7 @@
         <div id="u604_div" class=""></div>
         <!-- Unnamed () -->
         <div id="u605" class="text" style="visibility: visible;">
-          <p><span>GAME LIST</span></p>
+          <p><span>CONTACT US</span></p>
         </div>
       </div>
 
