--- a/WebContent/coming_soon.html
+++ b/WebContent/coming_soon.html
@@ -614,7 +614,7 @@
         <div id="u876_div" class=""></div>
         <!-- Unnamed () -->
         <div id="u877" class="text" style="visibility: visible;">
-          <p><span>GAME LIST</span></p>
+          <p><span>CONTACT US</span></p>
         </div>
       </div>
 
