--- a/WebContent/terms_conditions.html
+++ b/WebContent/terms_conditions.html
@@ -468,7 +468,7 @@
         <div id="u436_div" class=""></div>
         <!-- Unnamed () -->
         <div id="u437" class="text" style="visibility: visible;">
-          <p><span>GAME LIST</span></p>
+          <p><span>CONTACT US</span></p>
         </div>
       </div>
 
