Add some more information to account page and init.sql

--- a/WebContent/account_page.html
+++ b/WebContent/account_page.html
@@ -311,7 +311,7 @@
         <div id="u1368_div" class=""></div>
         <!-- Unnamed () -->
         <div id="u1369" class="text" style="">
-          <p><span>Your subscription will automatically renew on </span></p><p><span>25/05/2017 and you will be charged $14.99 each month</span></p>
+          <p><span>Your subscription will automatically renew on 25/06/2017 and you will be charged $14.99 each month.</span></p><p><span>If your main payment option is not available, other option will be used.</span></p>
         </div>
       </div>
 
