Fix a bug allowing user to register without choosing a gender

--- a/WebContent/register.html
+++ b/WebContent/register.html
@@ -252,7 +252,7 @@
 		      <!-- Unnamed (Rectangle) -->
 		      <div id="rf5" class="ax_default box_2">
 		        <div id="rf" class="text" style="visibility: visible;">
-		          <p><span>Gender: </span></p>
+		          <p><span>Gender*: </span></p>
 		        </div>
 		      </div>
 		      
