Add text box to edit user sections

--- a/WebContent/account_page.html
+++ b/WebContent/account_page.html
@@ -161,42 +161,23 @@
           <p><span>ACCOUNT INFORMATION</span></p>
         </div>
       </div>
-
-      <!-- Unnamed (Rectangle) -->
-      <div id="u1336" class="ax_default primary_button">
-        <div id="u1336_div" class=""></div>
-        <!-- Unnamed () -->
-        <div id="u1337" class="text" style="display: none; visibility: hidden">
-          <p><span></span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (Rectangle) -->
-      <div id="u1338" class="ax_default primary_button">
-        <div id="u1338_div" class=""></div>
-        <!-- Unnamed () -->
-        <div id="u1339" class="text" style="display: none; visibility: hidden">
-          <p><span></span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (Rectangle) -->
-      <div id="u1340" class="ax_default primary_button">
-        <div id="u1340_div" class=""></div>
-        <!-- Unnamed () -->
-        <div id="u1341" class="text" style="display: none; visibility: hidden">
-          <p><span></span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (Rectangle) -->
-      <div id="u1342" class="ax_default primary_button">
-        <div id="u1342_div" class=""></div>
-        <!-- Unnamed () -->
-        <div id="u1343" class="text" style="display: none; visibility: hidden">
-          <p><span></span></p>
-        </div>
-      </div>
+		<form id='editUser' action='editUser' method='post'>
+		      <div id="editPassword" class="ax_default">
+		        <input id="editPasswordInput" type="password" value="" name="password"/>
+		      </div>
+		
+		      <div id="editLastname" class="ax_default">
+		        <input id="editLastnameInput" type="text" value="" name="lastname"/>
+		      </div>
+		
+		      <div id="editEmail" class="ax_default">
+		        <input id="editEmailInput" type="text" value="" name="email"/>
+		      </div>
+		
+		      <div id="editFirstname" class="ax_default">
+		        <input id="editFirstnameInput" type="text" value="" name="firstname"/>
+		      </div>
+      </form>
 
       <!-- Unnamed (Rectangle) -->
       <div id="u1344" class="ax_default heading_3">
