--- a/WebContent/account_page.html
+++ b/WebContent/account_page.html
@@ -161,7 +161,7 @@
           <p><span>ACCOUNT INFORMATION</span></p>
         </div>
       </div>
-		<form id='editUser' action='editUser' method='post'>
+		<form id='editUser' action='editUser?uID=' method='post'>
 		      <div id="editPassword" class="ax_default">
 		        <input id="editPasswordInput" type="password" value="" name="password"/>
 		      </div>
