Edit User completed

--- a/WebContent/account_page.html
+++ b/WebContent/account_page.html
@@ -55,6 +55,7 @@
     <script src="data/logout.js"></script>
     <script src="data/removeGame.js"></script>
     <script src="data/updatePayment.js"></script>
+    <script src="data/editUser.js"></script>
     
    
   </head>
